--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p class="info-section">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et<p>
                 <div class="buttons">
                     <a href="login.html">
-                        <div class="button filled-button">Zaloguj się</div>
+                        <div class="button filled-button">Zaloguj siaę</div>
                     </a>
                     <a href="#more">
                         <div class="button outline-button">Przeczytaj więcej</div>
