--- a/main.html
+++ b/main.html
@@ -36,9 +36,32 @@
                 edit
                 </span>
         </div>
-        <div class="nav-item">co</div>
-        <div class="nav-item">za</div>
-        <div class="nav-item">gówno</div>
+        <div class="nav-rail-container">
+        <div class="nav-helper">
+            <ul class="nav-list">
+                <li><a href="#">
+                    <span class="material-symbols-outlined">
+                        search
+                    </span>
+                    <span class="nav-text">Wyszukaj</span>
+                </a></li>
+                <li><a href="#">
+                    <span class="material-symbols-outlined">
+                        chat
+                        </span>
+                    <span class="nav-text">Wiadomości</span>
+                </a></li>
+                <li><a href="#">
+                    <span class="material-symbols-outlined">
+                        account_circle
+                        </span>
+                        <br/>
+                        <span class="nav-text">Konto</span>
+                </a></li>
+            </ul>
+        </div>
+        </div>
+        
     </div>
     <div id="wraper">
         
